src/index.scss
@import './styles/mixins';

:root {
  --clr-neutral-100: hsla(0, 0%, 100%, 1);
  --clr-neutral-600: hsl(236, 21%, 26%);
  --clr-neutral-700: hsl(235, 16%, 14%);
  --clr-neutral-800: hsla(234, 17%, 12%, 1);

  --clr-primary-400: hsla(345, 95%, 68%, 1);
  --clr-primary-300: hsla(237, 18%, 59%, 1);

  --ff-base: 'Red Hat Text', sans-serif;

  --fw-regular: 300;
  --fw-semi-bold: 400;
  --fw-bold: 700;

  --fs-200: 0.5rem;
  --fs-300: 0.75rem;
  --fs-400: .875rem;
  --fs-500: 1rem;
  --fs-600: 1.25rem;
  --fs-700: 1.5rem;
  --fs-800: 5rem;

}

html{
  color-scheme: dark;
  font-size: var(--fs-400);
}

*, *::before, *::after{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  padding-inline: 2rem;
  line-height: 1.5;
  font-weight: var(--fw-bold);
  font-family: var(--ff-base);
  background-color: var(--clr-neutral-800);
  background-image: url(assets/images/bg-stars.svg);
  min-height: 100vh;
  min-height: 100dvh;
  display: grid;

  &::after{
    content: '';
    position: absolute;
    inset: 0;
    z-index: -1;
    background: url(./assets/images/pattern-hills.svg);
    background-position: 90% bottom;
    background-repeat: no-repeat;
    background-size: 200% 30%;
    pointer-events: none;

    @include big{
      background-size: 100%;
      background-position: bottom;
    }
  }
}

img,
svg,
picture,
video {
  max-width: 100%;
  display: block;
}


.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

main{
  display: flex;
  height: 100%;
  max-height: 100%;
  text-align: center;
  place-items: center;
  flex-direction: column;
  padding-top: 10rem;
  gap: 4rem;

  @include big{
    padding-top: 8rem;
    gap: 6rem;
  }
}

main > h1{
  text-transform: uppercase;
  font-size: var(--fs-600);
  font-weight: var(--fw-bold);
  letter-spacing: .3em;

  @include big{
    font-size: var(--fs-700);
  }
}

footer{
  margin-top: auto;
  padding-bottom: 4rem;
}

.social-icons{
  display: flex;
  justify-content: center;
  gap: 2.5rem;
  list-style: none;
}

.social-icons .social-icon{
  aspect-ratio: 1;
  scale: 1.125;

  @include big{
    scale: 1;
  }

  & > *{
    transition: all .3s ease;
  }

  &:hover{
    & > *{
      fill: var(--clr-primary-400);
    }
  }
}

.tile-grid{
  display: grid;
  gap: 2rem;
  grid-template-columns: repeat(4, 1fr);

  @include mobile{
    gap: 3vw;
  }
}

.tile{
  --min-width: 10rem;
  --tile-height: 7rem;
  --panel-height: 9rem;

  display: flex;
  flex-direction: column;
  align-items: center;
  min-width: var(--min-width);
  width: var(--min-width);
  gap: 1.5rem;
  justify-content: stretch;
  cursor: pointer;

  @include mobile{
    --min-width: 5.25rem;
    --tile-height: 2rem;
    --panel-height: 5rem;
    --fs-800: 2.75rem;
  }

  .dots{
    background: 
      radial-gradient(circle at var(--pos1), hsla(0, 0%, 0%, 70%) 5px, var(--bg-color) 0) var(--pos1),
      radial-gradient(circle at var(--pos2), hsla(0, 0%, 0%, 70%) 5px, var(--bg-color) 0) var(--pos2),
      radial-gradient(circle at var(--pos3), hsla(0, 0%, 0%, 70%) 5px, var(--bg-color) 0) var(--pos3),
      radial-gradient(circle at var(--pos4), hsla(0, 0%, 0%, 70%) 5px, var(--bg-color) 0) var(--pos4)
    ;
    background-size: 50% 100%;
    background-repeat: no-repeat;
  }

  & > div{
    --shadow-color: hsla(0, 0%, 0%, .2);
    height: var(--tile-height);
    flex: 1;
    width: 100%;
    border-radius: .25rem;
    box-shadow: 
      0 12px 4px -2px var(--shadow-color),
      8px 0 8px -4px var(--shadow-color),
      -8px 0 8px -4px var(--shadow-color);

      display: grid;
      grid-template-rows: calc(var(--panel-height)/2) calc(var(--panel-height)/2);
      position: relative;
  }

  .panel{
    height: var(--panel-height);
    display: grid;
    place-items: center;
    font-size: var(--fs-800);
    color: var(--clr-primary-400);
    text-align: center;
    will-change: contents;
  }

  .panel-container{
    overflow: hidden;
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
    --pos1: bottom left;
    --pos2: bottom right;
    --pos3: bottom left;
    --pos4: bottom right;
    --bg-color: var(--clr-neutral-600);
    position: relative;

    &.top{
      transform-origin: bottom;
      opacity: .7;
    }

    &.bottom{
      transform: rotateX(180deg);

      .panel{
        transform: rotateY(180deg) rotateZ(180deg);
      }
    }
  }


  .flipper{
    perspective: 400px;
    position: absolute;
    inset: 0;
    width: 100%;
    min-height: 100%;
    z-index: 1;
    border-radius: inherit;
    --pos1: center left;
    --pos2: center right;
    --pos3: center left;
    --pos4: center right;
    --bg-color: var(--clr-neutral-600);
    visibility: hidden;
    opacity: 0;
    transition: opacity .7s;
    pointer-events: none;

    &.turning{
      visibility: visible;
      opacity: 1;
    }
  }
  
  .flipper-object{
    position: absolute;
    width: 100%;
    height: 100%;
    transition: transform 1s;
    transform-style: preserve-3d;
    will-change: transform;
  
    .panel{
      position: absolute;
      border-radius: inherit;
      inset: 0;
      margin: 0;
      backface-visibility: hidden;
    }
  }

  .flipper-vertical .front{
    clip-path: inset(0 0 50% 0);
    opacity: 0;
    will-change: contents;
    transition: opacity .7s linear;
  }
  
  .flipper-vertical .back{
    transform: rotateX(180deg);
    clip-path: inset(50% 0 0 0);
  }

  .flipper-vertical.turning{
    .front{
      opacity: 1;
    }

    animation: flip 1s linear infinite;
  }

  @keyframes flip {
    100%{
      transform: rotateX(-180deg);
    }
  }
  

  & > h3{
    text-transform: uppercase;
    color: var(--clr-primary-300);
    letter-spacing: .5em;
    font-size: var(--fs-300);
    grid-row: fit-content;

    @include mobile{
      font-size: var(--fs-200);
    }
  }
}


.attribution { font-size: 11px; text-align: center; }
.attribution a { color: hsl(228, 45%, 44%); }

